...
        android:layout_gravity="center"
        android:textSize="26sp"
        autofit:minTextSize="18sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/add_time_to_task_seekbar"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_below="@id/add_time_to_task_taskname"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true" />
...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/add_time_to_task_seekbar_text"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/add_time_to_task_nextBtn"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/add_time_to_task_next"
            android:layout_centerHorizontal="true"
...
