<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    xmlns:autofit="http://schemas.android.com/tools"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="@drawable/list_item_line"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <CheckBox
        android:id="@+id/item_select_item_checkbox"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentStart="true"/>

        <me.grantland.widget.AutofitTextView
            android:id="@+id/item_select_task_name"
            android:layout_toEndOf="@id/item_select_item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/dummy_content"
            android:layout_centerVertical="true"
            android:padding="16dp"
            android:textSize="17sp"
            autofit:minTextSize="15sp"/>
</RelativeLayout>